Use jdk.test.lib.security.CertificateBuilder to create signing certificates instead of static sign-env.xml